src/tests/snapshots/gitu__tests__inside_worktree.snap
---
source: src/tests/mod.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main new-branch origin/main add initial-file                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 4d5a9a1a08dc1d60
