src/tests/snapshots/gitu__tests__log.snap
---
source: src/tests/mod.rs
expression: ctx.redact_buffer()
---
▌* 0c2c6c3 main a-tag add secondfile                             Author Name __ |
 * 223428c annotated add firstfile                               Author Name __ |
 * b66a0bf origin/main add initial-file                          Author Name __ |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: ce95d2071672732e
