src/tests/snapshots/gitu__tests__long_lines_are_cut_off_with_wrap_lines_disabled.snap
---
source: src/tests/mod.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is ahead of 'origin/main' by 1 commit(s).                          |
                                                                                |
 Recent commits                                                                 |
 ac66c1a main add a commit summary that is far too wide to fit … Author Name __ |
 b66a0bf origin/main add initial-file                            Author Name __ |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: b2801eef61626397
