src/tests/snapshots/gitu__tests__mouse_select_hunk_line.snap
---
source: src/tests/mod.rs
expression: ctx.redact_buffer()
---
 On branch main                                                                 |
 Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Unstaged changes (1)                                                           |
 modified   testfile                                                            |
 @@ -1,2 +1,2 @@                                                                |
  test                                                                          |
 -testtest                                                                      |
▌+moretest                                                                      |
                                                                                |
 Staged changes (1)                                                             |
 added      testfile…                                                           |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                       Author Name __ |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 1a2bc37441f14c16
