src/tests/snapshots/gitu__tests__mouse_select_ignore_empty_lines.snap
---
source: src/tests/mod.rs
expression: ctx.redact_buffer()
---
 On branch main                                                                 |
 Your branch is ahead of 'origin/main' by 1 commit(s).                          |
                                                                                |
 Unstaged changes (1)                                                           |
▌modified   testfile…                                                           |
                                                                                |
 Recent commits                                                                 |
 cd4d2d1 main add testfile                                                      |
 b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: c8491f47b65cb53b
