src/tests/snapshots/gitu__tests__mouse_show_ignore_empty_lines.snap
---
source: src/tests/mod.rs
expression: ctx.redact_buffer()
---
 On branch main                                                                 |
 Your branch is ahead of 'origin/main' by 1 commit(s).                          |
                                                                                |
 Stashes                                                                        |
▌stash@0 On main: firststash                                                    |
                                                                                |
 Recent commits                                                                 |
 cd4d2d1 main Author Name add testfile                                          |
 b66a0bf origin/main Author Name add initial-file                               |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: eb3ab71b0f73da36
